# portsman

portsman/: AUTHORS  BUGS  CONTRIB  COPYING  ChangeLog  FAQ  INSTALL  LICENSE  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
portsman/config/: Makefile.am  portsmanrc.sample
portsman/doc/: Makefile.am  portsman.man  portsmanrc.man
portsman/src/: Makefile.am  browse.c  compare.c  consts.h  fns.h  globals.h  includes.h  io.c  list.c  list.h  main.c  manage.c  parse.c  res.h  system.c  tree.c  tree.h  types.h  window.c
